--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
-<title>Website Name</title>
-<meta content="Embed Title" property="og:title" />
-<meta content="Site Description" property="og:description" />
+<title>Coaster Operator<</title>
+<meta content="Coaster Operator<" property="og:title" />
+<meta content="Coaster Operator is a game on roblox where you can operate diffrent coasters!" property="og:description" />
 <meta content="https://embed.com/this-is-the-site-url" property="og:url" />
 <meta content="https://embed.com/embedimage.png" property="og:image" />
 <meta content="#43B581" data-react-helmet="true" name="theme-color" />
