--- a/index.html
+++ b/index.html
@@ -11,7 +11,9 @@
     <title>Coaster Operator</title>
     
     <meta content="Coaster Operator<" property="og:title" />
-    <meta content="Coaster Operator is a game on roblox where you can operate diffrent coasters!" property="og:description" />
+    <meta content="Embark on an exciting journey through a diverse array of amusement parks and roller coaster attractions around the world. Take charge of various roller coasters and operate them. Work and play with friends to operate coasters!
+      
+    © 2024 Coaster Operator Holdings, All Rights Reserved." property="og:description" />
     <meta content="https://embed.com/this-is-the-site-url" property="og:url" />
     <meta content="https://embed.com/embedimage.png" property="og:image" />
     <meta content="#43B581" data-react-helmet="true" name="theme-color" />
