--- a/index.html
+++ b/index.html
@@ -3,9 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Coaster Operator</title>
 </head>
 <body>
-    <html>Test</html>
+    <html>Testing123</html>
 </body>
 </html>
