--- a/login.html
+++ b/login.html
@@ -14,7 +14,7 @@
     </script>
 </head>
 <body>
-    <h1>Coding Cat login</h1>
+    <h1>Coaster Operator login</h1>
     <form>
         <label for="username">Username:</label>
         <input type="text" id="username" name="username"><br><br>
