--- a/index.html
+++ b/index.html
@@ -3,9 +3,30 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Coaster Operator</title>
+    <title>Document</title>
 </head>
 <body>
-    <html>Testing123</html>
+    <nav>
+        <div class="logo">SEND</div>
+        <div class="nav-item">
+            <a href="/">Home</a>
+            <a href="/">Guides</a>
+            <a href="/">Forums</a>
+            <a href="/">Updates</a>
+        </div>
+    </nav>
+    <section class="hero">
+        <div class="hero-container">
+            <div class="column-left">
+                <h1>Coaster Operator</h1>
+                <p>Welcome to Coaster Operator! Where you are the one in charge of controlling the coaster!</p>
+                <button>Play Now!</button>
+            </div>
+            <div class="column-right">
+                <img src="Images/ThumbnailNew.png" alt="illustration" 
+                class = "hero-image">
+            </div>
+        </div>
+    </section>
 </body>
 </html>
