--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <link rel="stylesheet" href="Css/Mainpage.css" />
+    <link rel="icon" type="image/x-icon" href="Images/ProfileIcon.png">
 </head>
 <body>
     <nav>
