--- a/login.html
+++ b/login.html
@@ -1,17 +1,11 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
-    <title>Login</title>
-    <script>
-        function validate() {
-            var username = document.getElementById("username").value;
-            var password = document.getElementById("password").value;
-
-            if (username == "Admin" && password == "123") {
-                window.location.href = "cool.html";
-            }
-        }
-    </script>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Signup</title>
+    <link rel="stylesheet" href="Css/Login.css" />
+    <link rel="icon" type="image/x-icon" href="Images/ProfileIcon.png">
 </head>
 <body>
     <h1>Coaster Operator login</h1>
@@ -27,5 +21,5 @@
 </body>
 </html>
 <div>
-  <a href="index.html">Main Menu</a>
+  <a href="index">Main Menu</a>
 </div>
