--- a/Signup.html
+++ b/Signup.html
@@ -4,6 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Signup</title>
+    <link rel="stylesheet" href="Css/Signup.css" />
+    <link rel="icon" type="image/x-icon" href="Images/ProfileIcon.png">
 </head>
 <body>
     <html>Account Signup</html>
