--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Coaster Operator</title>
     <link rel="stylesheet" href="Css/Mainpage.css" />
     <link rel="icon" type="image/x-icon" href="Images/ProfileIcon.png">
 </head>
