--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 </head>
 <body>
     <nav>
-        <div class="logo">SEND</div>
+        <div class="logo">COASTER OPERATOR</div>
         <div class="nav-item">
             <a href="/">Home</a>
             <a href="/">Guides</a>
