--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
             <div class="column-left">
                 <h1>Coaster Operator</h1>
                 <p>Welcome to Coaster Operator! Where you are the one in charge of controlling the coaster!</p>
-                <button>stelio bad at coding</button>
+                <button>Play Now!</button>
             </div>
             <div class="column-right">
             </div>
