--- a/Testing/index.html
+++ b/Testing/index.html
@@ -6,7 +6,7 @@
 </head>
 <body>
     <header>
-        <a href="#" class="logo">Coaster Operator</a>
+        <a href="/" class="logo">Coaster Operator</a>
         <ul>
             <li><a href="/">Home</a></li>
             <li><a href="/">Guides</a></li>
