--- a/Testing/index.html
+++ b/Testing/index.html
@@ -1,18 +1,17 @@
 <!DOCTYPE html>
-<html lang="en">
-<head>
-    <title>Coaster Operator</title>
-    <link rel="stylesheet" type="text/css" href="index.css">
-</head>
-<body>
-    <header>
-        <a href="/" class="logo">Coaster Operator</a>
-        <ul>
-            <li><a href="/">Home</a></li>
-            <li><a href="/">Guides</a></li>
-            <li><a href="/">Forums</a></li>
-            <li><a href="/">Updates</a></li>
-        </ul>
-    </header>
-</body>
-</html>
+    <html lang="en">
+    <head>
+        <title>Coaster Operator</title>
+        <link rel="stylesheet" href="index.css">
+    </head>
+    <body>
+        <nav>
+        <a href="/">Home</a> 
+        <a href="/">Guides</a> 
+        <a href="/">Forums</a> 
+        <a href="/">Discord</a> 
+        <a href="/">Updates</a> 
+        <span></span>
+        </nav>
+    </body>
+    </html>
