--- a/Login.html
+++ b/Login.html
@@ -4,7 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Coaster Operator</title>
-    <link rel="stylesheet" href="Css/Signup.css" />
+    <link rel="stylesheet" href="Css/Accounts.css" />
+    <link rel="script" href="Scripts/Accounts.js">
     <link rel="icon" type="image/x-icon" href="Images/ProfileIcon.png">
 </head>
 <body>
@@ -23,14 +24,14 @@
             <!-- Google button -->
             <div class="option">
               <a href="#">
-                <img src="logos/google.png" alt="Google" />
+                <img src="Images/GoogleLogo.png" alt="Google" />
                 <span>Google</span>
               </a>
             </div>
             <!-- Apple button -->
             <div class="option">
               <a href="#">
-                <img src="logos/apple.png" alt="Apple" />
+                <img src="Images/AppleIcon.png" alt="Apple" />
                 <span>Apple</span>
               </a>
             </div>
