--- a/Testing/index.html
+++ b/Testing/index.html
@@ -1,8 +1,10 @@
 <!DOCTYPE html>
     <html lang="en">
     <head>
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>Coaster Operator</title>
         <link rel="stylesheet" href="index.css">
+        <link rel="icon" type="image/x-icon" href="Images/ProfileIcon.png">
     </head>
     <body>
         <nav>
