--- a/Signup.html
+++ b/Signup.html
@@ -15,11 +15,11 @@
     <script src="https://www.gstatic.com/firebasejs/10.13.1/firebase-database.js"></script>
 
     <script src="Scripts/Accounts.js"></script>
-    
-    <div class="login_form">
-        <!-- Login form container -->
+
+      <div class="Signup_form">
+        <!-- Signup form container -->
         <form action="#">
-          <h3>Log in with</h3>
+          <h3>Sign Up With</h3>
           <div class="login_option">
             <!-- Google button -->
             <div class="option">
@@ -54,10 +54,9 @@
             <input type="password" id="password" placeholder="Enter your password" required />
           </div>
            <!-- Login button -->
-          <button type="submit">Log In</button>
-          <p class="sign_up">Don't have an account? <a href="Signup">Sign up</a></p>
+          <button type="submit">Sign Up</button>
+          <p class="sign_up">Allready have an account? <a href="Login">Log In</a></p>
         </form>
       </div>
-
 </body>
 </html>
