--- a/Signup.html
+++ b/Signup.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Coaster Operator</title>
-    <link rel="stylesheet" href="Css/Accounts.css" />
+    <link rel="stylesheet" href="Css/Signup.css" />
     <link rel="script" href="Scripts/Accounts.js">
     <link rel="icon" type="image/x-icon" href="Images/ProfileIcon.png">
 </head>
@@ -53,7 +53,7 @@
             </div>
             <input type="password" id="password" placeholder="Enter your password" required />
           </div>
-           <!-- Login button -->
+           <!-- Signup button -->
           <button type="submit">Sign Up</button>
           <p class="sign_up">Allready have an account? <a href="Login">Log In</a></p>
         </form>
