--- a/Login.html
+++ b/Login.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Coaster Operator</title>
-    <link rel="stylesheet" href="Css/Accounts.css" />
+    <link rel="stylesheet" href="Css/Login.css" />
     <link rel="script" href="Scripts/Accounts.js">
     <link rel="icon" type="image/x-icon" href="Images/ProfileIcon.png">
 </head>
