--- a/Testing/index.html
+++ b/Testing/index.html
@@ -12,6 +12,7 @@
         <a href="/">Guides</a> 
         <a href="/">Forums</a> 
         <a href="/">Discord</a> 
+        <a href="/">Shop</a> 
         <a href="/">Updates</a> 
         <span></span>
         </nav>
