--- a/Testing/index.html
+++ b/Testing/index.html
@@ -9,9 +9,9 @@
     <body>
         <nav>
         <a href="/">Home</a> 
-        <a href="/">Guides</a> 
-        <a href="/">Forums</a> 
-        <a href="/">Discord</a> 
+        <a href="/Guides">Guides</a> 
+        <a href="/Forums">Forums</a> 
+        <a href="https://discord.com/invite/coasteroperator">Discord</a> 
         <a href="/">Shop</a> 
         <a href="/">Updates</a> 
         <span></span>
