--- a/Testing/index.html
+++ b/Testing/index.html
@@ -8,12 +8,12 @@
     </head>
     <body>
         <nav>
-        <a href="/">Home</a> 
+        <a href="/Home">Home</a> 
         <a href="/Guides">Guides</a> 
         <a href="/Forums">Forums</a> 
         <a href="https://discord.com/invite/coasteroperator">Discord</a> 
-        <a href="/">Shop</a> 
-        <a href="/">Updates</a> 
+        <a href="/Shop">Shop</a> 
+        <a href="/Updates">Updates</a> 
         <span></span>
         </nav>
     </body>
