--- a/Login.html
+++ b/Login.html
@@ -50,7 +50,7 @@
             required
           />
         </div>
-        <!-- Paswrod input box -->
+        <!-- Password input box -->
         <div class="input_box">
           <div class="password_title">
             <label for="password">Password</label>
