--- a/Signup.html
+++ b/Signup.html
@@ -40,6 +40,16 @@
         <p class="separator">
           <span>or</span>
         </p>
+                <!-- Username input box -->
+                <div class="input_box">
+                  <label for="Username">Username</label>
+                  <input
+                    type="text"
+                    id="Username"
+                    placeholder="Enter Username"
+                    required
+                  />
+                </div>
         <!-- Email input box -->
         <div class="input_box">
           <label for="email">Email</label>
@@ -50,7 +60,7 @@
             required
           />
         </div>
-        <!-- Paswrod input box -->
+        <!-- Password input box -->
         <div class="input_box">
           <div class="password_title">
             <label for="password">Password</label>
@@ -62,6 +72,18 @@
             required
           />
         </div>
+                <!-- Verify Password input box -->
+                <div class="input_box">
+                  <div class="password_title">
+                    <label for="VerifyPassword">Verify Password</label>
+                  </div>
+                  <input
+                    type=""
+                    id="password"
+                    placeholder="Enter your password"
+                    required
+                  />
+                </div>
         <!-- Signup button -->
         <button type="submit">Sign Up</button>
         <p class="sign_up">
