--- a/Testing/index.html
+++ b/Testing/index.html
@@ -8,11 +8,11 @@
   </head>
   <body>
     <nav>
-      <a href="/">Home</a>
-      <a href="/">Guides</a>
-      <a href="/">Forums</a>
-      <a href="/">Discord</a>
-      <a href="/">Updates</a>
+      <a href="index">Home</a>
+      <a href="Guides">Guides</a>
+      <a href="Forums">Forums</a>
+      <a href="https://discord.com/invite/coasteroperator">Discord</a>
+      <a href="Updates">Updates</a>
       <span></span>
     </nav>
   </body>
