--- a/Login.html
+++ b/Login.html
@@ -7,6 +7,7 @@
     <link rel="stylesheet" href="Css/Login.css" />
     <link rel="script" href="Scripts/Accounts.js" />
     <link rel="icon" type="image/x-icon" href="Images/ProfileIcon.png" />
+    <script src="https://www.google.com/recaptcha/enterprise.js?render=6LdBoDkqAAAAAMkv9pe5qaQ8iN6YGvrXtVr1SYMf"></script>
   </head>
   <body>
     <script src="https://www.gstatic.com/firebasejs/10.13.1/firebase-app.js"></script>
