--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     </head>
     <body>
         <nav>
-        <a href="/Home">Home</a> 
+        <a href="">Home</a> 
         <a href="/Guides">Guides</a> 
         <a href="/Forums">Forums</a> 
         <a href="https://discord.com/invite/coasteroperator">Discord</a> 
