--- a/Accounts/Signup.html
+++ b/Accounts/Signup.html
@@ -4,9 +4,9 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Coaster Operator</title>
-    <link rel="stylesheet" href="Css/Signup.css" />
-    <link rel="script" href="Scripts/Accounts.js" />
-    <link rel="icon" type="image/x-icon" href="Images/ProfileIcon.png" />
+    <link rel="stylesheet" href="/Css/Signup.css" />
+    <link rel="script" href="/Scripts/Accounts.js" />
+    <link rel="icon" type="image/x-icon" href="/Images/ProfileIcon.png" />
     <script src="https://www.google.com/recaptcha/enterprise.js?render=6LdBoDkqAAAAAMkv9pe5qaQ8iN6YGvrXtVr1SYMf"></script>
   </head>
   <body>
