--- a/index.html
+++ b/index.html
@@ -9,11 +9,11 @@
     <body>
         <nav>
         <a href="">Home</a> 
-        <a href="/Guides">Guides</a> 
-        <a href="/Forums">Forums</a> 
+        <a href="/MainPages/Guides">Guides</a> 
+        <a href="MainPages/Forums">Forums</a> 
         <a href="https://discord.com/invite/coasteroperator">Discord</a> 
-        <a href="/Shop">Shop</a> 
-        <a href="/Updates">Updates</a> 
+        <a href="/MainPages/Shop">Shop</a> 
+        <a href="MainPages/Updates">Updates</a> 
         <span></span>
         </nav>
     </body>
