--- a/Accounts/Login.html
+++ b/Accounts/Login.html
@@ -66,7 +66,7 @@
           />
         </div>
         <!-- Login button -->
-        <button type="submit">Log In</button>
+        <button onclick="Login()" type="submit">Log In</button>
         <p class="sign_up">
           Don't have an account? <a href="Signup">Sign up</a>
           
