--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     </head>
     <body>
         <nav>
+            <a href=""class="logo">Coaster Operator</a> 
         <a href="">Home</a> 
         <a href="/MainPages/Guides">Guides</a> 
         <a href="MainPages/Forums">Forums</a> 
@@ -17,4 +18,4 @@
         <span></span>
         </nav>
     </body>
-</html>
+    </html>
