--- a/Accounts/Signup.html
+++ b/Accounts/Signup.html
@@ -87,7 +87,7 @@
           />
         </div>
         <!-- Signup button -->
-        <button type="submit">Sign Up</button>
+        <button onclick="register()" type="SignUpButton">Sign Up</button>
         <p class="sign_up">
           Allready have an account? <a href="Login">Log In</a>
         </p>
