--- a/Accounts/Signup.html
+++ b/Accounts/Signup.html
@@ -44,11 +44,11 @@
         </p>
         <!-- Username input box -->
         <div class="input_box">
-          <label for="Username">Username</label>
+          <label for="username">Username</label>
           <input
             type="text"
-            id="Username"
-            placeholder="Enter Username"
+            id="username"
+            placeholder="Enter username"
             required
           />
         </div>
