--- a/Accounts/Login.html
+++ b/Accounts/Login.html
@@ -26,14 +26,14 @@
           <!-- Google button -->
           <div class="option">
             <a href="#">
-              <img src="Images/GoogleLogo.png" alt="Google" />
+              <img src="/Images/GoogleLogo.png" alt="Google" />
               <span>Google</span>
             </a>
           </div>
           <!-- Apple button -->
           <div class="option">
             <a href="#">
-              <img src="Images/AppleIcon.png" alt="Apple" />
+              <img src="/Images/AppleIcon.png" alt="Apple" />
               <span>Apple</span>
             </a>
           </div>
