--- a/Accounts/Signup.html
+++ b/Accounts/Signup.html
@@ -26,14 +26,14 @@
           <!-- Google button -->
           <div class="option">
             <a href="#">
-              <img src="Images/GoogleLogo.png" alt="Google" />
+              <img src="/Images/GoogleLogo.png" alt="Google" />
               <span>Google</span>
             </a>
           </div>
           <!-- Apple button -->
           <div class="option">
             <a href="#">
-              <img src="Images/AppleIcon.png" alt="Apple" />
+              <img src="/Images/AppleIcon.png" alt="Apple" />
               <span>Apple</span>
             </a>
           </div>
@@ -69,18 +69,6 @@
           </div>
           <input
             type="password"
-            id="password"
-            placeholder="Enter your password"
-            required
-          />
-        </div>
-        <!-- Verify Password input box -->
-        <div class="input_box">
-          <div class="password_title">
-            <label for="VerifyPassword">Verify Password</label>
-          </div>
-          <input
-            type=""
             id="password"
             placeholder="Enter your password"
             required
