--- a/Accounts/Login.html
+++ b/Accounts/Login.html
@@ -28,11 +28,11 @@
               <span>Google</span>
             </a>
           </div>
-          <!-- Apple button -->
+          <!-- Roblox button -->
           <div class="option">
             <a href="#">
-              <img src="/Images/AppleIcon.png" alt="Apple" />
-              <span>Apple</span>
+              <img src="/Images/RobloxLogo.png" alt="Roblox" />
+              <span>Roblox</span>
             </a>
           </div>
         </div>
