--- a/Accounts/Signup.html
+++ b/Accounts/Signup.html
@@ -20,7 +20,7 @@
       <!-- Signup form container -->
       <form action="#">
         <h3>Sign Up With</h3>
-        <div class="signup_option">
+        <div class="Signup_option">
           <!-- Google button -->
           <div class="option">
             <a href="#">
