--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
   </head>
   <body>
     <main>
-      <h1>example.com</h1>
+      <h1>coasteroperator.com</h1>
       <p>Our website is under construction.</p>
     </main>
   </body>
