--- a/indexNewPage.html
+++ b/indexNewPage.html
@@ -1,20 +1,20 @@
-<!DOCTYPE html>
-    <html lang="en">
-    <head>
-        <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title>Coaster Operator</title>
-        <link rel="stylesheet" href="/Css/index.css">
-        <link rel="icon" type="image/x-icon" href="Images/ProfileIcon.png">
-    </head>
-    <body>
-        <nav>
-        <a href="">Home</a> 
-        <a href="/MainPages/Guides">Guides</a> 
-        <a href="MainPages/Forums">Forums</a> 
-        <a href="https://discord.com/invite/coasteroperator">Discord</a> 
-        <a href="/MainPages/Shop">Shop</a> 
-        <a href="MainPages/Updates">Updates</a> 
-        <span></span>
-        </nav>
-    </body>
-    </html>
+<!doctype html>
+<html lang="en">
+  <head>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Coaster Operator</title>
+    <link rel="stylesheet" href="/Css/index.css" />
+    <link rel="icon" type="image/x-icon" href="Images/ProfileIcon.png" />
+  </head>
+  <body>
+    <nav>
+      <a href="">Home</a>
+      <a href="/MainPages/Guides">Guides</a>
+      <a href="MainPages/Forums">Forums</a>
+      <a href="https://discord.com/invite/coasteroperator">Discord</a>
+      <a href="/MainPages/Shop">Shop</a>
+      <a href="MainPages/Updates">Updates</a>
+      <span></span>
+    </nav>
+  </body>
+</html>
