--- a/index.html
+++ b/index.html
@@ -1,19 +1,34 @@
 <!doctype html>
 <html lang="en">
   <head>
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta charset="utf-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
     <title>Coaster Operator</title>
-    <link rel="icon" type="image/x-icon" href="Images/ProfileIcon.png">
+    <link rel="icon" type="image/x-icon" href="Images/ProfileIcon.png" />
     <style>
-      html, body {
+      html,
+      body {
         height: 100%;
       }
       body {
         background-color: #fff;
-        background: radial-gradient(circle at center, #fff 0%, #f8f8f8 75%, #ebebeb 100%);
+        background: radial-gradient(
+          circle at center,
+          #fff 0%,
+          #f8f8f8 75%,
+          #ebebeb 100%
+        );
         color: #222;
-        font-family: system-ui, -apple-system, "Segoe UI", Roboto, "Helvetica Neue", Arial, "Noto Sans", "Liberation Sans", sans-serif;
+        font-family:
+          system-ui,
+          -apple-system,
+          "Segoe UI",
+          Roboto,
+          "Helvetica Neue",
+          Arial,
+          "Noto Sans",
+          "Liberation Sans",
+          sans-serif;
         font-size: 1rem;
         line-height: 1.5;
         margin: 0;
@@ -38,7 +53,13 @@
       h1::after {
         content: "";
         background-color: #ffe800;
-        background: repeating-linear-gradient(45deg, #ffe800, #ffe800 0.5rem, #222 0.5rem, #222 1.0rem);
+        background: repeating-linear-gradient(
+          45deg,
+          #ffe800,
+          #ffe800 0.5rem,
+          #222 0.5rem,
+          #222 1rem
+        );
         display: block;
         height: 0.5rem;
         margin-top: 1rem;
