--- a/Accounts/Login.html
+++ b/Accounts/Login.html
@@ -5,7 +5,6 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Coaster Operator</title>
     <link rel="stylesheet" href="/Css/Login.css" />
-    <link rel="script" href="/Scripts/Accounts.js" />
     <link rel="icon" type="image/x-icon" href="/Images/ProfileIcon.png" />
   </head>
   <body>
@@ -14,7 +13,7 @@
     <script src="https://www.gstatic.com/firebasejs/10.13.1/firebase-auth.js"></script>
     <script src="https://www.gstatic.com/firebasejs/10.13.1/firebase-database.js"></script>
 
-    <script src="Scripts/Accounts.js"></script>
+    <script src="/Scripts/Accounts.js"></script>
 
     <div class="login_form">
       <!-- Login form container -->
