--- a/Accounts/Signup.html
+++ b/Accounts/Signup.html
@@ -5,10 +5,15 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Coaster Operator</title>
     <link rel="stylesheet" href="/Css/Signup.css" />
-    <link rel="script" href="/Scripts/Accounts.js" />
     <link rel="icon" type="image/x-icon" href="/Images/ProfileIcon.png" />
   </head>
   <body>
+    <script src="https://www.gstatic.com/firebasejs/10.13.1/firebase-app.js"></script>
+
+    <script src="https://www.gstatic.com/firebasejs/10.13.1/firebase-auth.js"></script>
+    <script src="https://www.gstatic.com/firebasejs/10.13.1/firebase-database.js"></script>
+
+    <script src="/Scripts/Accounts.js"></script>
 
     <div class="Signup_form">
       <!-- Signup form container -->
