--- a/indexNewPage.html
+++ b/indexNewPage.html
@@ -3,9 +3,12 @@
     <head>
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>Coaster Operator</title>
-        <link rel="stylesheet" href="/Css/index.css">
+        <link rel="stylesheet" href="index.css">
         <link rel="icon" type="image/x-icon" href="Images/ProfileIcon.png">
     </head>
+<header>
+    <a class="Logo">Coaster Operator</a>
+</header>
     <body>
         <nav>
         <a href="">Home</a> 
@@ -18,4 +21,3 @@
         </nav>
     </body>
     </html>
-<img src="Images/ProfileIcon.png" alt="Avatar" class="avatar">
