--- a/indexNewPage.html
+++ b/indexNewPage.html
@@ -3,8 +3,8 @@
     <head>
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>Coaster Operator</title>
-        <link rel="stylesheet" href="index.css">
-        <link rel="icon" type="image/x-icon" href="Images/ProfileIcon.png">
+        <link rel="stylesheet" href="/index.css">
+        <link rel="icon" type="image/x-icon" href="/Images/ProfileIcon.png">
     </head>
 <header>
     <a class="Logo">Coaster Operator</a>
@@ -13,10 +13,10 @@
         <nav>
         <a href="">Home</a> 
         <a href="/MainPages/Guides">Guides</a> 
-        <a href="MainPages/Forums">Forums</a> 
+        <a href="/MainPages/Forums">Forums</a> 
         <a href="https://discord.com/invite/coasteroperator">Discord</a> 
         <a href="/MainPages/Shop">Shop</a> 
-        <a href="MainPages/Updates">Updates</a> 
+        <a href="/MainPages/Updates">Updates</a> 
         <span></span>
         </nav>
     </body>
