--- a/MainPages/Guides.html
+++ b/MainPages/Guides.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Guides</title>
+    <title>Coaster Operator</title>
   </head>
   <body>
     Guides
