--- a/MainPages/Shop.html
+++ b/MainPages/Shop.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Shop</title>
+    <title>Coaster Operator</title>
   </head>
   <body>
     Shop
