--- a/indexNewPage.html
+++ b/indexNewPage.html
@@ -3,7 +3,7 @@
     <head>
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>Coaster Operator</title>
-        <link rel="stylesheet" href="/index.css">
+        <link rel="stylesheet" href="/Css/index.css">
         <link rel="icon" type="image/x-icon" href="/Images/ProfileIcon.png">
     </head>
 <header>
