--- a/index.html
+++ b/index.html
@@ -77,6 +77,9 @@
     <main>
       <h1>coasteroperator.com</h1>
       <p>Our website is under construction.</p>
+      <div>First Name: <span id="loggedUserFName"></span></div>
+      <div>Last Name: <span id="loggedUserLName"></span></div>
+      <div>Email: <span id="loggedUserEmail"></span></div>
     </main>
   </body>
 </html>
