--- a/indexNewPage.html
+++ b/indexNewPage.html
@@ -3,8 +3,8 @@
     <head>
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>Coaster Operator</title>
-        <link rel="stylesheet" href="/Css/index.css">
-        <link rel="icon" type="image/x-icon" href="/Images/ProfileIcon.png">
+        <link rel="stylesheet" href="index.css">
+        <link rel="icon" type="image/x-icon" href="Images/ProfileIcon.png">
     </head>
 <header>
     <a class="Logo">Coaster Operator</a>
@@ -19,5 +19,7 @@
         <a href="/MainPages/Updates">Updates</a> 
         <span></span>
         </nav>
+        
+        <button class="Welcome">Join now!</button>
     </body>
     </html>
