--- a/indexNewPage.html
+++ b/indexNewPage.html
@@ -20,6 +20,6 @@
       <span></span>
     </nav>
 
-    <button class="Welcome">Join now!</button>
+    <button href="https://www.roblox.com/games/17152219682/Coaster-Operator" class="Welcome">Join now!</button>
   </body>
 </html>
