--- a/indexNewPage.html
+++ b/indexNewPage.html
@@ -15,7 +15,7 @@
       <a href="/MainPages/Guides">Guides</a>
       <a href="/MainPages/Forums">Forums</a>
       <a href="https://discord.com/invite/coasteroperator">Discord</a>
-      <a href="/MainPages/Shop">Shop</a>
+      <a href="https://coasteroperator.printify.me/products">Shop</a>
       <a href="/MainPages/Updates">Updates</a>
       <span></span>
     </nav>
