--- a/indexNewPage.html
+++ b/indexNewPage.html
@@ -12,6 +12,7 @@
   <body>
     <nav>
       <a href="">Home</a>
+      <a href="/MainPages/Jobs">Jobs</a>
       <a href="/MainPages/Guides">Guides</a>
       <a href="/MainPages/Forums">Forums</a>
       <a href="https://discord.com/invite/coasteroperator">Discord</a>
