--- a/indexNewPage.html
+++ b/indexNewPage.html
@@ -12,12 +12,12 @@
   <body>
     <nav>
       <a href="">Home</a>
-      <a href="/MainPages/Jobs">Jobs</a>
-      <a href="/MainPages/Guides">Guides</a>
-      <a href="/MainPages/Forums">Forums</a>
+      <a href="/Jobs">Jobs</a>
+      <a href="/Guides">Guides</a>
+      <a href="/Forums">Forums</a>
       <a href="https://discord.com/invite/coasteroperator">Discord</a>
       <a href="https://coasteroperator.printify.me/products">Shop</a>
-      <a href="/MainPages/Updates">Updates</a>
+      <a href="/Updates">Updates</a>
       <span></span>
     </nav>
 
