--- a/404.html
+++ b/404.html
@@ -1,9 +1,5 @@
 <!DOCTYPE html>
-<!--[if lt IE 7 ]><html class="ie ie6" lang="en"> <![endif]-->
-<!--[if IE 7 ]><html class="ie ie7" lang="en"> <![endif]-->
-<!--[if IE 8 ]><html class="ie ie8" lang="en"> <![endif]-->
-<!--[if (gte IE 9)|!(IE)]><!-->
-<html lang="en"> <!--<![endif]-->
+<html lang="en">
 
 <head>
     <meta charset="utf-8" />
@@ -38,14 +34,6 @@
     <!-- Content Wrapper -->
     <div id="wrapper">
         <div class="container">
-            <!-- Switcher -->
-            <div class="switcher">
-                <input id="sw" type="checkbox" class="switcher-value">
-                <label for="sw" class="sw_btn"></label>
-                <div class="bg"></div>
-                <div class="text">Turn <span class="text-l">off</span><span class="text-d">on</span><br />the light</div>
-            </div>
-            <!-- End Switcher -->
 
             <!-- Dark version -->
             <div id="dark" class="row text-center">
@@ -54,21 +42,6 @@
                 </div>
             </div>
             <!-- End Dark version -->
-
-            <!-- Light version -->
-            <div id="light" class="row text-center">
-                <!-- Info -->
-                <div class="info">
-                    <img src="//pkfrom.github.io/404/assets/img/404-light.gif" alt="404 error" />
-                    <!-- end Rabbit -->
-                    <p>The page you are looking for was moved, removed,<br />
-                        renamed or might never existed.</p>
-                    <a href="http://%domain%/" class="btn">Go Home</a>
-                    <!--<a href="#" class="btn btn-brown">Contact Us</a>-->
-                </div>
-                <!-- end Info -->
-            </div>
-            <!-- End Light version -->
 
         </div>
         <!-- end container -->
@@ -82,12 +55,6 @@
     <script src="//pkfrom.github.io/404/assets/js/modernizr.custom.js" type="text/javascript"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery.nicescroll/3.6.0/jquery.nicescroll.min.js" type="text/javascript"></script>
     <script src="//pkfrom.github.io/404/assets/js/404.min.js" type="text/javascript"></script>
-
-    <!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
-    <!--[if lt IE 9]>
-    <script src="https://oss.maxcdn.com/html5shiv/3.7.2/html5shiv.min.js"></script>
-    <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
-    <![endif]-->
 
 </body>
 </html>
