--- a/404.html
+++ b/404.html
@@ -1,52 +1,96 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en">
-
-<head>
+  <head>
     <meta charset="utf-8" />
     <title>404</title>
     <meta name="author" content="pkfrom" />
     <meta name="keywords" content="404 page, css3, template, html5 template" />
     <meta name="description" content="404 - Page Template" />
-    <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1" />
+    <meta
+      name="viewport"
+      content="width=device-width, initial-scale=1, maximum-scale=1"
+    />
 
-    <link type="text/css" media="all" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css" rel="stylesheet" />
-    <link type="text/css" media="all" href="//pkfrom.github.io/404/assets/css/404.min.css" rel="stylesheet" />
+    <link
+      type="text/css"
+      media="all"
+      href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css"
+      rel="stylesheet"
+    />
+    <link
+      type="text/css"
+      media="all"
+      href="//pkfrom.github.io/404/assets/css/404.min.css"
+      rel="stylesheet"
+    />
 
+    <link
+      rel="apple-touch-icon"
+      sizes="144x144"
+      href="//pkfrom.github.io/404/assets/img/favicons/favicon144x144.png"
+    />
+    <link
+      rel="apple-touch-icon"
+      sizes="114x114"
+      href="//pkfrom.github.io/404/assets/img/favicons/favicon114x114.png"
+    />
+    <link
+      rel="apple-touch-icon"
+      sizes="72x72"
+      href="//pkfrom.github.io/404/assets/img/favicons/favicon72x72.png"
+    />
+    <link
+      rel="apple-touch-icon"
+      href="//pkfrom.github.io/404/assets/img/favicons/favicon57x57.png"
+    />
+    <link
+      rel="shortcut icon"
+      href="//pkfrom.github.io/404/assets/img/favicons/favicon.png"
+    />
 
-    <link rel="apple-touch-icon" sizes="144x144" href="//pkfrom.github.io/404/assets/img/favicons/favicon144x144.png" />
-    <link rel="apple-touch-icon" sizes="114x114" href="//pkfrom.github.io/404/assets/img/favicons/favicon114x114.png" />
-    <link rel="apple-touch-icon" sizes="72x72" href="//pkfrom.github.io/404/assets/img/favicons/favicon72x72.png" />
-    <link rel="apple-touch-icon" href="//pkfrom.github.io/404/assets/img/favicons/favicon57x57.png" />
-    <link rel="shortcut icon" href="//pkfrom.github.io/404/assets/img/favicons/favicon.png" />
-
-    <link href='http://fonts.googleapis.com/css?family=Raleway:300,400,500,600,700,800,900' rel='stylesheet' type='text/css'>
-
-</head>
-<body>
-
+    <link
+      href="http://fonts.googleapis.com/css?family=Raleway:300,400,500,600,700,800,900"
+      rel="stylesheet"
+      type="text/css"
+    />
+  </head>
+  <body>
     <div class="animationload">
-        <div class="loader">
-        </div>
+      <div class="loader"></div>
     </div>
 
     <div id="wrapper">
-        <div class="container">
-
-            <div id="dark" class="row text-center">
-                <div class="info">
-                    <img src="//pkfrom.github.io/404/assets/img/404-dark.png" alt="404 error" />
-                </div>
-            </div>
-
+      <div class="container">
+        <div id="dark" class="row text-center">
+          <div class="info">
+            <img
+              src="//pkfrom.github.io/404/assets/img/404-dark.png"
+              alt="404 error"
+            />
+          </div>
         </div>
-
+      </div>
     </div>
 
-    <script src="https://code.jquery.com/jquery-2.2.0.min.js" type="text/javascript"></script>
-    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js" type="text/javascript"></script>
-    <script src="//pkfrom.github.io/404/assets/js/modernizr.custom.js" type="text/javascript"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery.nicescroll/3.6.0/jquery.nicescroll.min.js" type="text/javascript"></script>
-    <script src="//pkfrom.github.io/404/assets/js/404.min.js" type="text/javascript"></script>
-
-</body>
+    <script
+      src="https://code.jquery.com/jquery-2.2.0.min.js"
+      type="text/javascript"
+    ></script>
+    <script
+      src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js"
+      type="text/javascript"
+    ></script>
+    <script
+      src="//pkfrom.github.io/404/assets/js/modernizr.custom.js"
+      type="text/javascript"
+    ></script>
+    <script
+      src="https://cdnjs.cloudflare.com/ajax/libs/jquery.nicescroll/3.6.0/jquery.nicescroll.min.js"
+      type="text/javascript"
+    ></script>
+    <script
+      src="//pkfrom.github.io/404/assets/js/404.min.js"
+      type="text/javascript"
+    ></script>
+  </body>
 </html>
