--- a/50x.html
+++ b/50x.html
@@ -1,11 +1,11 @@
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Strict//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml" xml:lang="en" lang="en">
   <head>
-    <title>403 &mdash; Forbidden</title>
+    <title>500 &mdash; Internal Sever Error</title>
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
     <meta
       name="description"
-      content="You do not have permission to view this"
+      content="Sorry, something went wrong. Internal Server Error"
     />
     <style type="text/css">
       body {
@@ -57,8 +57,8 @@
   </head>
 
   <body>
-    <h1>403</h1>
-    <h2>Forbidden</h2>
-    <div>Unfortunately, you do not have permission to view this</div>
+    <h1>500</h1>
+    <h2>Internal Server Error</h2>
+    <div>Sorry, something went wrong :(</div>
   </body>
 </html>
