--- a/indexNewPage.html
+++ b/indexNewPage.html
@@ -21,6 +21,11 @@
       <span></span>
     </nav>
 
-    <button href="https://www.roblox.com/games/17152219682/Coaster-Operator" class="Welcome">Join now!</button>
+    <button
+      href="https://www.roblox.com/games/17152219682/Coaster-Operator"
+      class="Welcome"
+    >
+      Join now!
+    </button>
   </body>
 </html>
