--- a/indexNewPage.html
+++ b/indexNewPage.html
@@ -21,10 +21,7 @@
       <span></span>
     </nav>
 
-    <button
-      href="https://www.roblox.com/games/17152219682/Coaster-Operator"
-      class="Welcome"
-    >
+    <button> href="https://www.roblox.com/games/17152219682/Coaster-Operator"class="Welcome" >
       Join now!
     </button>
   </body>
