--- a/indexNewPage.html
+++ b/indexNewPage.html
@@ -3,7 +3,7 @@
   <head>
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Coaster Operator</title>
-    <link rel="stylesheet" href="/Css/index.css" />
+    <link rel="stylesheet" href="Css/index.css" />
     <link rel="icon" type="image/x-icon" href="/Images/ProfileIcon.png" />
   </head>
   <header>
@@ -21,8 +21,6 @@
       <span></span>
     </nav>
 
-    <button> href="https://www.roblox.com/games/17152219682/Coaster-Operator"class="Welcome" >
-      Join now!
-    </button>
+    <a href="https://www.roblox.com/games/17152219682/Coaster-Operator"><button>Visit Coaster Operator</button></a>
   </body>
 </html>
