--- a/404.html
+++ b/404.html
@@ -4,8 +4,8 @@
     <meta charset="utf-8" />
     <title>404</title>
     <meta name="author" content="pkfrom" />
-    <meta name="keywords" content="404 page, css3, template, html5 template" />
-    <meta name="description" content="404 - Page Template" />
+    <meta name="keywords" content="404" />
+    <meta name="description" content="404" />
     <meta
       name="viewport"
       content="width=device-width, initial-scale=1, maximum-scale=1"
