--- a/index.html
+++ b/index.html
@@ -1,82 +1,26 @@
 <!doctype html>
 <html lang="en">
   <head>
-    <meta charset="utf-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Coaster Operator</title>
+    <link rel="stylesheet" href="Css/index.css" />
     <link rel="icon" type="image/x-icon" href="/Images/ProfileIcon.png" />
-    <style>
-      html,
-      body {
-        height: 100%;
-      }
-      body {
-        background-color: #fff;
-        background: radial-gradient(
-          circle at center,
-          #fff 0%,
-          #f8f8f8 75%,
-          #ebebeb 100%
-        );
-        color: #222;
-        font-family:
-          system-ui,
-          -apple-system,
-          "Segoe UI",
-          Roboto,
-          "Helvetica Neue",
-          Arial,
-          "Noto Sans",
-          "Liberation Sans",
-          sans-serif;
-        font-size: 1rem;
-        line-height: 1.5;
-        margin: 0;
-        display: flex;
-        justify-content: center;
-        align-items: center;
-      }
-      main {
-        padding: 1rem;
-        text-align: center;
-      }
-      h1 {
-        font-size: 2.5rem;
-        line-height: 1.1;
-        margin: 0;
-      }
-      @media screen and (max-width: 480px) {
-        h1 {
-          font-size: 1.5rem;
-        }
-      }
-      h1::after {
-        content: "";
-        background-color: #ffe800;
-        background: repeating-linear-gradient(
-          45deg,
-          #ffe800,
-          #ffe800 0.5rem,
-          #222 0.5rem,
-          #222 1rem
-        );
-        display: block;
-        height: 0.5rem;
-        margin-top: 1rem;
-      }
-      img {
-        max-width: 100%;
-        height: auto;
-      }
-      p {
-        margin: 1rem 0 0 0;
-      }
-    </style>
   </head>
+  <header>
+    <a class="Logo">Coaster Operator</a>
+  </header>
   <body>
-    <main>
-      <h1>coasteroperator.com</h1>
-      <p>Our website is under construction.</p>
-    </main>
+    <nav>
+      <a href="">Home</a>
+      <a href="/Jobs">Jobs</a>
+      <a href="/Guides">Guides</a>
+      <a href="/Forums">Forums</a>
+      <a href="https://discord.com/invite/coasteroperator">Discord</a>
+      <a href="https://coasteroperator.printify.me/products">Shop</a>
+      <a href="/Updates">Updates</a>
+      <span></span>
+    </nav>
+
+    <a href="https://www.roblox.com/games/17152219682/Coaster-Operator"><button>Visit Coaster Operator</button></a>
   </body>
 </html>
