--- a/index.html
+++ b/index.html
@@ -21,6 +21,8 @@
       <span></span>
     </nav>
 
-    <a href="https://www.roblox.com/games/17152219682/Coaster-Operator"><button>Visit Coaster Operator</button></a>
+    <a href="https://www.roblox.com/games/17152219682/Coaster-Operator"
+      ><button>Visit Coaster Operator</button></a
+    >
   </body>
 </html>
