--- a/index.html
+++ b/index.html
@@ -1,13 +1,35 @@
+@ -1,28 +1,13 @@
 <!doctype html>
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Coaster Operator</title>
+    <link rel="stylesheet" href="/Css/index.css" />
+    <link rel="icon" type="image/x-icon" href="/Images/ProfileIcon.png" />
     <title>Vite App</title>
   </head>
+  <header>
+    <a class="Logo">Coaster Operator</a>
+  </header>
   <body>
+    <nav>
+      <a href="">Home</a>
+      <a href="/Jobs">Jobs</a>
+      <a href="/Guides">Guides</a>
+      <a href="/Forums">Forums</a>
+      <a href="https://discord.com/invite/coasteroperator">Discord</a>
+      <a href="https://coasteroperator.printify.me/products">Shop</a>
+      <a href="/Updates">Updates</a>
+      <span></span>
+    </nav>
+
+    <a href="https://www.roblox.com/games/17152219682/Coaster-Operator"
+      ><button>Visit Coaster Operator</button></a
+    >
     <div id="app"></div>
     <script type="module" src="/main.js"></script>
   </body>
+</html>
 </html>
