--- a/index.html
+++ b/index.html
@@ -25,6 +25,26 @@
     <a href="https://www.roblox.com/games/17152219682/Coaster-Operator"
       ><button>Visit Coaster Operator</button></a
     >
+
+    <div id="sign-in"></div>
+    
+    <script
+  async
+  crossorigin="anonymous"
+  data-clerk-publishable-key="pk_test_Y3VkZGx5LWh1bXBiYWNrLTg1LmNsZXJrLmFjY291bnRzLmRldiQ"
+  src="https://cuddly-humpback-85.clerk.accounts.dev/npm/@clerk/clerk-js@latest/dist/clerk.browser.js"
+  type="text/javascript"
+></script>
+
+<script>
+  window.addEventListener('load', async function () {
+    await Clerk.load()
+
+    const signInDiv = document.getElementById('sign-in')
+
+    Clerk.mountSignIn(signInDiv)
+  })
+</script>
   </body>
 </html>
 </html>
