--- a/index.html
+++ b/index.html
@@ -23,9 +23,9 @@
     </nav>
 
     <a href="https://www.roblox.com/games/17152219682/Coaster-Operator"
-      ><button>Visit Coaster Operator</button></a
-    >
-    
+      ><button>Visit Coaster Operator</button></a>
+    <a href="/profile"
+    ><button type=image name=img1 src='Images/DefaultProfileIcon.png'></button></a>
   </body>
 </html>
 </html>
