--- a/index.html
+++ b/index.html
@@ -23,6 +23,7 @@
     </nav>
 
     <a href="https://www.roblox.com/games/17152219682/Coaster-Operator"
+    target="_blank"
       ><button>Visit Coaster Operator</button></a>
     <a href="/profile"
     ><button type=image name=img1 src='/Images/DefaultProfileIcon.png'></button></a>
