--- a/index.html
+++ b/index.html
@@ -22,6 +22,8 @@
       <span></span>
     </nav>
 
+    <img src="/Images/DefaultProfileIcon.png" alt="Avatar" class="avatar">
+
     <a href="https://www.roblox.com/games/17152219682/Coaster-Operator"
     target="_blank"
     ><button>Visit Coaster Operator</button></a>
