--- a/Signup.html
+++ b/Signup.html
@@ -30,8 +30,11 @@
   
       Clerk.mountSignUp(signUpDiv)
     })
+
+    const element = document.getElementById("cl-internal-b3fm6y");
+    element.remove();
   </script>
-  
+
   </body>
 </html>
 </html>
