--- a/Signup.html
+++ b/Signup.html
@@ -32,7 +32,7 @@
     })
 
     const element = document.getElementById("cl-internal-b3fm6y");
-    element.remove();
+    element.classList.remove();
   </script>
 
   </body>
