--- a/Signup.html
+++ b/Signup.html
@@ -31,7 +31,7 @@
       Clerk.mountSignUp(signUpDiv)
     })
 
-    const element = document.getElementById("cl-internal-b3fm6y");
+    const element = document.getElementsByClassName("cl-internal-b3fm6y");
     element.classList.remove();
   </script>
 
