--- a/Signup.html
+++ b/Signup.html
@@ -32,7 +32,7 @@
     })
 
     const element = document.getElementsByClassName("cl-internal-b3fm6y");
-    element.classList.remove();
+    element.classList.remove("cl-internal-b3fm6y");
   </script>
 
   </body>
