--- a/SignIn.html
+++ b/SignIn.html
@@ -11,7 +11,27 @@
     <a class="Logo">Coaster Operator</a>
   </header>
   <body>
-    
+
+    <div id="sign-in"></div>
+
+<script
+  async
+  crossorigin="anonymous"
+  data-clerk-publishable-key="pk_test_Y3VkZGx5LWh1bXBiYWNrLTg1LmNsZXJrLmFjY291bnRzLmRldiQ"
+  src="https://cuddly-humpback-85.clerk.accounts.dev/npm/@clerk/clerk-js@latest/dist/clerk.browser.js"
+  type="text/javascript"
+></script>
+
+<script>
+  window.addEventListener('load', async function () {
+    await Clerk.load()
+
+    const signInDiv = document.getElementById('sign-in')
+
+    Clerk.mountSignIn(signInDiv)
+  })
+</script>
+
   </body>
 </html>
 </html>
