--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
       <a href="https://coasteroperator.printify.me/products">Shop</a>
       <a href="/Updates">Updates</a>
       <span></span>
+      <div id="user-button"></div>
       <img src="/Images/DefaultProfileIcon.png" alt="Avatar" class="avatar" />
     </nav>
 
@@ -28,5 +29,24 @@
       target="_blank"
       ><button>Visit Coaster Operator</button></a
     >
+
+<script
+  async
+  crossorigin="anonymous"
+  data-clerk-publishable-key="pk_test_Y3VkZGx5LWh1bXBiYWNrLTg1LmNsZXJrLmFjY291bnRzLmRldiQ"
+  src="https://cuddly-humpback-85.clerk.accounts.dev/npm/@clerk/clerk-js@latest/dist/clerk.browser.js"
+  type="text/javascript"
+></script>
+
+<script>
+  window.addEventListener('load', async function () {
+    await Clerk.load()
+
+    const userbuttonDiv = document.getElementById('user-button')
+
+    Clerk.mountUserButton(userbuttonDiv)
+  })
+</script>
+
   </body>
 </html>
