--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
       <a href="/Updates">Updates</a>
       <span></span>
       <div id="user-button"></div>
-      <img src="/Images/DefaultProfileIcon.png" alt="Avatar" id="Avatar" class="Avatar" />
+      <img src="/Images/DefaultProfileIcon.png" href="/SignIn" alt="Avatar" id="Avatar" class="Avatar" />
     </nav>
 
     <a
