--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
       <span></span>
       <div id="user-button"></div>
     </nav>
-
+    <div id="sign-in"></div>
     <a
       href="https://www.roblox.com/games/17152219682/Coaster-Operator"
       target="_blank"
