--- a/index copy.html
+++ b/index copy.html
@@ -11,10 +11,23 @@
     <a class="Logo">Coaster Operator</a>
   </header>
   <body>
+    <nav>
+      <a href="">Home</a>
+      <a href="/Jobs">Jobs</a>
+      <a href="/Guides">Guides</a>
+      <a href="/Forums">Forums</a>
+      <a href="https://discord.com/invite/coasteroperator">Discord</a>
+      <a href="https://coasteroperator.printify.me/products">Shop</a>
+      <a href="/Updates">Updates</a>
+      <span></span>
       <div id="user-button"></div>
 
-      <div id="sign-in"></div>
-      
+    <a
+      href="https://www.roblox.com/games/17152219682/Coaster-Operator"
+      target="_blank"
+      ><button>Visit Coaster Operator</button></a
+    >
+
 <script
   async
   crossorigin="anonymous"
