--- a/index.html
+++ b/index.html
@@ -11,41 +11,26 @@
     <a class="Logo">Coaster Operator</a>
   </header>
   <body>
-      <div id="user-button"></div>
+    
+    <div id="sign-in"></div>
 
-      <div id="sign-in"></div>
-      
-<script
-  async
-  crossorigin="anonymous"
-  data-clerk-publishable-key="pk_test_Y3VkZGx5LWh1bXBiYWNrLTg1LmNsZXJrLmFjY291bnRzLmRldiQ"
-  src="https://cuddly-humpback-85.clerk.accounts.dev/npm/@clerk/clerk-js@latest/dist/clerk.browser.js"
-  type="text/javascript"
-></script>
+    <script
+      async
+      crossorigin="anonymous"
+      data-clerk-publishable-key="pk_test_Y3VkZGx5LWh1bXBiYWNrLTg1LmNsZXJrLmFjY291bnRzLmRldiQ"
+      src="https://cuddly-humpback-85.clerk.accounts.dev/npm/@clerk/clerk-js@latest/dist/clerk.browser.js"
+      type="text/javascript"
+    ></script>
 
-<script>
-  window.addEventListener('load', async function () {
-    await Clerk.load()
+    <script>
+      window.addEventListener("load", async function () {
+        await Clerk.load();
 
-    if (Clerk.user) {
-      document.getElementById('app').innerHTML = `
-        <div id="user-button"></div>
-      `
+        const signInDiv = document.getElementById("sign-in");
 
-      const userButtonDiv = document.getElementById('user-button')
-
-      Clerk.mountUserButton(userButtonDiv)
-    } else {
-      document.getElementById('app').innerHTML = `
-        <div id="sign-in"></div>
-      `
-
-      const signInDiv = document.getElementById('sign-in')
-
-      Clerk.mountSignIn(signInDiv)
-    }
-  })
-</script>
+        Clerk.mountSignIn(signInDiv);
+      });
+    </script>
 
   </body>
 </html>
