--- a/Pages/Home.html
+++ b/Pages/Home.html
@@ -13,12 +13,12 @@
   <body>
     <nav>
       <a href="">Home</a>
-      <a href="/Jobs">Jobs</a>
-      <a href="/Guides">Guides</a>
-      <a href="/Forums">Forums</a>
+      <a href="/Pages/Jobs">Jobs</a>
+      <a href="/Pages/Guides">Guides</a>
+      <a href="/Pages/Forums">Forums</a>
       <a href="https://discord.com/invite/coasteroperator">Discord</a>
       <a href="https://coasteroperator.printify.me/products">Shop</a>
-      <a href="/Updates">Updates</a>
+      <a href="/Pages/Updates">Updates</a>
       <span></span>
       <div id="user-button"></div>
 
