--- a/Pages/Home.html
+++ b/Pages/Home.html
@@ -21,6 +21,7 @@
       <a href="/Pages/Updates">Updates</a>
       <span></span>
       <div id="user-button"></div>
+    </nav>
 <!--
     <a
       href="https://www.roblox.com/games/17152219682/Coaster-Operator"
