--- a/Pages/Organization.html
+++ b/Pages/Organization.html
@@ -8,25 +8,24 @@
   <body>
     Organization
 
-<div id="create-organization"></div>
+    <div id="create-organization"></div>
 
-<script
-  async
-  crossorigin="anonymous"
-  data-clerk-publishable-key="pk_test_Y3VkZGx5LWh1bXBiYWNrLTg1LmNsZXJrLmFjY291bnRzLmRldiQ"
-  src="https://cuddly-humpback-85.clerk.accounts.dev/npm/@clerk/clerk-js@latest/dist/clerk.browser.js"
-  type="text/javascript"
-></script>
+    <script
+      async
+      crossorigin="anonymous"
+      data-clerk-publishable-key="pk_test_Y3VkZGx5LWh1bXBiYWNrLTg1LmNsZXJrLmFjY291bnRzLmRldiQ"
+      src="https://cuddly-humpback-85.clerk.accounts.dev/npm/@clerk/clerk-js@latest/dist/clerk.browser.js"
+      type="text/javascript"
+    ></script>
 
-<script>
-  window.addEventListener('load', async function () {
-    await Clerk.load()
+    <script>
+      window.addEventListener("load", async function () {
+        await Clerk.load();
 
-    const createOrgDiv = document.getElementById('create-organization')
+        const createOrgDiv = document.getElementById("create-organization");
 
-    Clerk.mountCreateOrganization(createOrgDiv)
-  })
-</script>
-
+        Clerk.mountCreateOrganization(createOrgDiv);
+      });
+    </script>
   </body>
 </html>
