--- a/game.html
+++ b/game.html
@@ -1,1 +1,1 @@
-<iframe id="game" title="Drift Hunters" src="https://www.hoodamath.com/mobile/games/drift-hunters/game.html?nocheckorient=1" scrolling="no" allow="fullscreen" style="width:800;height:500;margin:0;border:0;padding:0;"></iframe>
+<iframe id="game" title="Drift Hunters" src="https://html-classic.itch.zone/html/2876359-1104083/index.html" scrolling="no" allow="fullscreen" style="width:800;height:500;margin:0;border:0;padding:0;"></iframe>
